--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <script data-main='main.js' src='requirejs/require.js'></script>
+    <script data-main='main.js' src='lib/require.js'></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel='stylesheet' type='text/css' href='style/style.css'>
   </head>
