Show popups instead of switching pages

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <body>
     <nav data-bind='component: "pageSwitcher"'></nav>
     <main data-bind='component: pages.current'></main>
+    <!-- ko component: "popup" --><!-- /ko -->
   </body>
 </html>
 
