--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <body>
     <nav data-bind='component: "pageSwitcher"'></nav>
-    <main data-bind='component: pages.current'></main>
+    <main data-bind='component: pages.current, css: {"popup-visible": popup.component}'></main>
     <!-- ko component: "popup" --><!-- /ko -->
   </body>
 </html>
