Use links for stylesheets

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <script data-main='main.js' src='lib/require.js'></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel='stylesheet' type='text/css' href='style/style.css'>
+    <link rel='stylesheet' type='text/css' href='style/fonts.css'>
+    <link rel='stylesheet' type='text/css' href='style/popup.css'>
+    <link rel='stylesheet' type='text/css' href='style/icon.css'>
+    <link rel='stylesheet' href='//fonts.googleapis.com/css?family=Raleway:200|Roboto:300|Roboto+Condensed:300'>
   </head>
 
   <body>
